solve some UI issues on mobile screen related to students reposotry list

--- a/resorces/css/styles.css
+++ b/resorces/css/styles.css
@@ -88,7 +88,7 @@ footer {
 
 ul{
     display: flex;
-    flex-wrap: wrap;
+    flex-direction: row;
     gap: 40px;
     
 }
